--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 
   <!-- CSS -->
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 
@@ -49,7 +49,7 @@
   <header class="header" id="header">
     <div class="header-container">
       <a href="#" class="logo-link">
-        <img src="/assets/logo.png" alt="BlackFish Logo" class="logo-img">
+        <img src="logo.png" alt="BlackFish Logo" class="logo-img">
         <div class="logo-text">
           <span class="logo-name">FileBox</span>
           <span class="logo-tagline">by BlackFish</span>
@@ -685,7 +685,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js"></script>
 
   <!-- App Script -->
-  <script src="/js/app.js"></script>
+  <script src="app.js"></script>
 </body>
+
 
 </html>
