--- a/index.html
+++ b/index.html
@@ -632,7 +632,7 @@
   <footer class="footer">
     <div class="footer-container">
       <div class="footer-brand">
-        <img src="/assets/logo.png" alt="BlackFish Logo" class="footer-logo">
+        <img src="logo.png" alt="BlackFish Logo" class="footer-logo">
         <div class="footer-brand-text">
           <span class="footer-name">FileBox</span>
           <span class="footer-tagline">by BlackFish Creative</span>
@@ -690,3 +690,4 @@
 
 
 </html>
+
