--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
   <meta property="og:description"
     content="Compress, expand, and convert files entirely in your browser. No uploads, no servers, complete privacy.">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="https://yourdomain.com/og-image.png"> <!-- Update with real image URL -->
-  <meta property="og:url" content="https://yourdomain.com"> <!-- Your site URL -->
+  <meta property="og:image" content="https://filebox-blackfish.vercel.app//og-image.png"> <!-- Update with real image URL -->
+  <meta property="og:url" content="https://filebox-blackfish.vercel.app/"> <!-- Your site URL -->
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="FileBox | Free Browser-Based File Toolkit">
   <meta name="twitter:description"
     content="Compress, expand, and convert files entirely in your browser. No uploads, no servers, complete privacy.">
-  <meta name="twitter:image" content="https://yourdomain.com/og-image.png"> <!-- Update with real image URL -->
+  <meta name="twitter:image" content="https://filebox-blackfish.vercel.app//og-image.png"> <!-- Update with real image URL -->
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -690,4 +690,5 @@
 
 
 </html>
+
 
