--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     content="FileBox, BlackFish, file toolkit, compress files, expand files, convert files, online file tools, browser-based tools">
   <meta name="author" content="BlackFish">
   <meta name="robots" content="index, follow">
+  <meta name="google-site-verification" content="googleded3ed58d3b139b2">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="logo2.png"> <!-- Prefer PNG for clarity -->
@@ -690,5 +691,6 @@
 
 
 </html>
+
 
 
