--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 
+  <meta name="google-site-verification" content="_Hhb-ds_OIEzsw5lQHAv8UarazMRpEQmUHccawSvw70" />
+
   <!-- CSS -->
   <link rel="stylesheet" href="style.css">
 </head>
@@ -691,6 +693,7 @@
 
 
 </html>
+
 
 
 
