--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
 
   <meta name="google-site-verification" content="_Hhb-ds_OIEzsw5lQHAv8UarazMRpEQmUHccawSvw70" />
 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8301117879057104"
+     crossorigin="anonymous"></script>
+
   <!-- CSS -->
   <link rel="stylesheet" href="style.css">
 </head>
