SEO Optimezed changed

--- a/index.html
+++ b/index.html
@@ -6,33 +6,39 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- SEO Meta -->
-  <title>FileBox | Free Browser-Based File Toolkit</title>
+  <!-- SEO Meta (OPTIMIZED) -->
+  <title>File Compressor, PDF Compressor, Image Compressor | File Expander & Converter – FileBox</title>
+
   <meta name="description"
-    content="FileBox by BlackFish – Compress, expand, and convert files entirely in your browser. No uploads, no servers, complete privacy.">
+    content="Free online file compressor, PDF compressor, image and photo compressor. Expand files, expand PDFs, expand images and convert files securely in your browser. No upload, no signup.">
+
   <meta name="keywords"
-    content="FileBox, BlackFish, file toolkit, compress files, expand files, convert files, online file tools, browser-based tools">
+    content="file compressor, pdf compressor, image compressor, photo compressor, online compressor, free file compressor, file expander, pdf expander, image expander, photo expander, file converter, pdf converter, image converter">
+
   <meta name="author" content="BlackFish">
   <meta name="robots" content="index, follow">
 
-  <!-- Favicon -->
-  <link rel="icon" type="image/png" href="logo2.png"> <!-- Prefer PNG for clarity -->
-  <link rel="shortcut icon" href="logo2.ico" type="image/x-icon"> <!-- Fallback for older browsers -->
+  <!-- Canonical (ADDED) -->
+  <link rel="canonical" href="https://filebox-blackfish.vercel.app/">
 
-  <!-- Open Graph / Social Sharing -->
-  <meta property="og:title" content="FileBox | Free Browser-Based File Toolkit">
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="logo2.png">
+  <link rel="shortcut icon" href="logo2.ico" type="image/x-icon">
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="File Compressor, PDF Compressor & Image Compressor – FileBox">
   <meta property="og:description"
-    content="Compress, expand, and convert files entirely in your browser. No uploads, no servers, complete privacy.">
+    content="Compress, expand and convert files online. Free PDF compressor, image compressor and file expander.">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="https://filebox-blackfish.vercel.app//og-image.png"> <!-- Update with real image URL -->
-  <meta property="og:url" content="https://filebox-blackfish.vercel.app/"> <!-- Your site URL -->
+  <meta property="og:url" content="https://filebox-blackfish.vercel.app/">
+  <meta property="og:image" content="https://filebox-blackfish.vercel.app/og-image.png">
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="FileBox | Free Browser-Based File Toolkit">
+  <meta name="twitter:title" content="File Compressor, PDF Compressor & Converter – FileBox">
   <meta name="twitter:description"
-    content="Compress, expand, and convert files entirely in your browser. No uploads, no servers, complete privacy.">
-  <meta name="twitter:image" content="https://filebox-blackfish.vercel.app//og-image.png"> <!-- Update with real image URL -->
+    content="Free online file compressor, PDF compressor, image compressor, expander and converter.">
+  <meta name="twitter:image" content="https://filebox-blackfish.vercel.app/og-image.png">
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -41,8 +47,8 @@
 
   <meta name="google-site-verification" content="_Hhb-ds_OIEzsw5lQHAv8UarazMRpEQmUHccawSvw70" />
 
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8301117879057104"
-     crossorigin="anonymous"></script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8301117879057104"
+    crossorigin="anonymous"></script>
 
   <!-- CSS -->
   <link rel="stylesheet" href="style.css">
@@ -691,10 +697,27 @@
 
   <!-- App Script -->
   <script src="app.js"></script>
+
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "SoftwareApplication",
+    "name": "FileBox",
+    "applicationCategory": "FileManagementApplication",
+    "operatingSystem": "Web Browser",
+    "description": "Free online file compressor, PDF compressor, image compressor, file expander and file converter.",
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD"
+    }
+  }
+  </script>
 </body>
 
 
 </html>
+
 
 
 
