--- a/index.html
+++ b/index.html
@@ -713,10 +713,24 @@
     }
   }
   </script>
+
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8301117879057104"
+     crossorigin="anonymous"></script>
+<!-- On page -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-8301117879057104"
+     data-ad-slot="7768296763"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </body>
 
 
 </html>
+
 
 
 
