--- a/index.html
+++ b/index.html
@@ -684,7 +684,8 @@
       </div>
 
       <div class="footer-bottom">
-        <p class="copyright">&copy; 2024 BlackFish — All rights reserved</p>
+        <p class="copyright">&copy; 2026 FileBox-By BlackFish — All rights reserved</p>
+        <p>Developed by Manjeet Gupta</p>
       </div>
     </div>
   </footer>
@@ -730,6 +731,7 @@
 
 
 </html>
+
 
 
 
