--- a/index.html
+++ b/index.html
@@ -684,7 +684,7 @@
       </div>
 
       <div class="footer-bottom">
-        <p class="copyright">&copy; 2026 FileBox-By BlackFish — All rights reserved<br>Developed By Manjeet Gupta!!</p>
+        <p class="copyright">&copy; 2026 FileBox-By BlackFish — All rights reserved — Developed By Manjeet Gupta!!</p>
       </div>
     </div>
   </footer>
@@ -730,6 +730,7 @@
 
 
 </html>
+
 
 
 
